tests/ui/assumptions_on_binders/resolved-region-var-max-universe.stderr
error[E0425]: cannot find type `T` in this scope
  --> $DIR/resolved-region-var-max-universe.rs:23:23
   |
LL |     [(); Parent::CT::<T>]:,
   |                       ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | fn check<T>()
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
